<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_default"
    android:weightSum="3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        style="@style/TitleTextShadow"
        android:typeface="sans"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="275dp" />

    <CheckBox
        android:id="@+id/overlapCheckBox"
        android:layout_width="232dp"
        android:layout_height="60dp"
        android:text="@string/checkbox"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/TitleTextShadow"
        android:textColor="#ff0101"
        android:layout_gravity="right" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <LinearLayout
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="0">

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="3">

                <Button
                    android:id="@+id/button1"
                    android:text="@string/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/red_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button2"
                    android:text="@string/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button3"
                    android:text="@string/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/button4"
                    android:text="@string/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button5"
                    android:text="@string/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button6"
                    android:text="@string/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/button7"
                    android:text="@string/button7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button8"
                    android:text="@string/button8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button9"
                    android:text="@string/button9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/button10"
                    android:text="@string/button10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button11"
                    android:text="@string/button11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button12"
                    android:text="@string/button12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/button13"
                    android:text="@string/button13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button14"
                    android:text="@string/button14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button15"
                    android:text="@string/button15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/button16"
                    android:text="@string/button16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button17"
                    android:text="@string/button17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button18"
                    android:text="@string/button18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:id="@+id/button19"
                    android:text="@string/button19"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button20"
                    android:text="@string/button20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>

                <Button
                    android:id="@+id/button21"
                    android:text="@string/button21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:background="@drawable/blue_button"
                    style="@style/button_text"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>